--- a/views/updates.hbs
+++ b/views/updates.hbs
@@ -18,8 +18,8 @@
                             <i class="fa fa-user"></i>Empleados
                         </a>
                     </li>
-                    <li>
-                        <a href="/updates">
+                    <li class="active">
+                        <a>
                             <i class="fa fa-check-square"></i>Novedades
                         </a>
                     </li>
@@ -41,105 +41,6 @@
 
     <!-- PAGE CONTAINER-->
     <div class="page-container2">
-        <!-- HEADER DESKTOP-->
-        <header class="header-desktop2">
-            <div class="section__content section__content--p30">
-                <div class="container-fluid">
-                    <div class="header-wrap2">
-                        <div class="header-button2">
-                            <div class="header-button-item js-item-menu">
-                                <i class="zmdi zmdi-search"></i>
-                                <div class="search-dropdown js-dropdown">
-                                    <form action="">
-                                        <input class="au-input au-input--full au-input--h65" type="text" placeholder="Buscar..." />
-                                        <span class="search-dropdown__icon">
-                                            <i class="zmdi zmdi-search"></i>
-                                        </span>
-                                    </form>
-                                </div>
-                            </div>
-                            <div class="header-button-item has-noti js-item-menu">
-                                <i class="zmdi zmdi-notifications"></i>
-                                <div class="notifi-dropdown js-dropdown">
-                                    <div class="notifi__title">
-                                        <p>Usted tiene 3 notificaciones</p>
-                                    </div>
-                                    <div class="notifi__item">
-                                        <div class="bg-c1 img-cir img-40">
-                                            <i class="zmdi zmdi-email-open"></i>
-                                        </div>
-                                        <div class="content">
-                                            <p>Usted tiene correo nuevo</p>
-                                            <span class="date">12 de Abril, 2018 09:37</span>
-                                        </div>
-                                    </div>
-                                    <div class="notifi__item">
-                                        <div class="bg-c2 img-cir img-40">
-                                            <i class="zmdi zmdi-account-box"></i>
-                                        </div>
-                                        <div class="content">
-                                            <p>Su cuenta ha sido bloqueada</p>
-                                            <span class="date">12 de Abril, 2018 09:23</span>
-                                        </div>
-                                    </div>
-                                    <div class="notifi__item">
-                                        <div class="bg-c3 img-cir img-40">
-                                            <i class="zmdi zmdi-file-text"></i>
-                                        </div>
-                                        <div class="content">
-                                            <p>Usted tiene un nuevo archivo</p>
-                                            <span class="date">11 de Abril, 2018 18:56</span>
-                                        </div>
-                                    </div>
-                                    <div class="notifi__footer">
-                                        <a href="#">Todas las Notificaciones</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="header-button-item mr-0 js-sidebar-btn">
-                                <i class="zmdi zmdi-menu"></i>
-                            </div>
-                            <div class="setting-menu js-right-sidebar d-none d-lg-block">
-                                <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-account"></i>Cuenta</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-settings"></i>Configuración</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-money-box"></i>Facturación</a>
-                                    </div>
-                                </div>
-                                <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-globe"></i>Lenguaje</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-pin"></i>Ubicación</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-email"></i>Email</a>
-                                    </div>
-                                    <div class="account-dropdown__item">
-                                        <a href="#">
-                                            <i class="zmdi zmdi-notifications"></i>Notificaciones</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- END HEADER DESKTOP-->
-
         <!-- BREADCRUMB-->
         <section class="au-breadcrumb m-t-75">
             <div class="section__content section__content--p30">
